bad/sub_invalid_types_null_bool.example_compiler_output
ERROR
[1mbad/sub_invalid_types_null_bool.lat:3:7: [1;31merror: [0;1msubtraction is defined only for int values, not `null` and `boolean`[m
	null - true;
	     [1;32m^[m
